--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
