--- a/back/manifest/postgres.yaml
+++ b/back/manifest/postgres.yaml
@@ -1,3 +1,17 @@
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres
+  labels:
+    run: postgres
+spec:
+  ports:
+    - port: 5432
+      targetPort: 5432
+  selector:
+    run: postgres
+---
 apiVersion: v1
 kind: Pod
 metadata:
@@ -10,9 +24,15 @@ spec:
     name: postgres
     ports:
     - containerPort: 5432
-    resources: {}
     env:
     - name: POSTGRES_PASSWORD
       value: 1q2w3e4r
-  hostNetwork: true 
-status: {}
+    volumeMounts:
+    - name: data
+      mountPath: /var/lib/postgresql/data
+  volumes:
+  - name: data
+    persistentVolumeClaim:
+      claimName: postgres-pvc
+      readOnly: false
+  hostNetwork: true
